--- a/QiuBai/res/values/strings.xml
+++ b/QiuBai/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">QiuBai</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    
+    
+    <string name="title_activity_detail">DetailActivity</string>
 
 </resources>
