--- a/QiuBai/res/values/strings.xml
+++ b/QiuBai/res/values/strings.xml
@@ -4,7 +4,11 @@
     <string name="app_name">QiuBai</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_detail">DetailActivity</string>
     <string name="title_text">糗百</string>
 
+    <!-- Detail Activity -->
+    <string name="title_activity_detail">DetailActivity</string>
+    
+    <!-- Comment Activity -->
+    <string name="title_activity_comment">CommentActivity</string>
 </resources>
