add login way and register

--- a/QiuBai/res/values/strings.xml
+++ b/QiuBai/res/values/strings.xml
@@ -17,4 +17,7 @@
     
     <!-- Login Activity -->
     <string name="title_activity_login">LoginActivity</string>
+    
+    <!-- Register Activity -->
+    <string name="title_activity_register">RegisterActivity</string>
 </resources>
