增加引导页面

--- a/QiuBai/res/values/strings.xml
+++ b/QiuBai/res/values/strings.xml
@@ -17,4 +17,7 @@
     
     <!-- Login Activity -->
     <string name="title_activity_login">LoginActivity</string>
+    
+    <!-- Guide Activity -->
+    <string name="title_activity_guide">GuideActivity</string>
 </resources>
