--- a/QiuBai/res/values/strings.xml
+++ b/QiuBai/res/values/strings.xml
@@ -17,6 +17,9 @@
     
     <!-- Login Activity -->
     <string name="title_activity_login">LoginActivity</string>
-<!-- Register Activity -->
-    <string name="title_activity_register">RegisterActivity</string><!-- Guide Activity -->
+	
+	<!-- Register Activity -->
+    <string name="title_activity_register">RegisterActivity</string>
+    
+    <!-- Guide Activity -->
     <string name="title_activity_guide">GuideActivity</string></resources>
