--- a/QiuBai/res/values/strings.xml
+++ b/QiuBai/res/values/strings.xml
@@ -6,8 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="title_text">糗百</string>
 
-    <!-- Detail Activity -->
-    <string name="title_activity_detail">DetailActivity</string>
+    <!-- Character Detail Activity -->
+    <string name="title_activity_cd">CharacterDetailActivity</string>
 
     <!-- Comment Activity -->
     <string name="title_activity_comment">CommentActivity</string>
